<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Stock Hawk</string>
    <string name="title_activity_stock_details">Stock Details</string>
    <string name="title_widget_detail">Stock Widget Details</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false" />
    <string name="fabContentDescription">Add Stock Symbol</string>
    <string name="stock_already_saved">This stock is already saved!</string>
    <string name="no_stock_symbol_provided">No Stock Symbol provided!</string>
    <string name="no_stock_matches">Company not listed</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="action_refresh_no_internet_connection">Refresh</string>


    <!-- Stock Info -->
    <string name="stock_details_open">Open</string>
    <string name="stock_details_market_cap">MktCap</string>
    <string name="stock_details_book_value">Book Value</string>
    <string name="stock_details_EBITDA">EBITDA</string>
    <string name="stock_details_DaysHigh">DaysHigh</string>
    <string name="stock_details_year_high">YearHigh</string>
    <string name="stock_details_DaysLow">DaysLow</string>
    <string name="stock_details_year_low">YearLow</string>
    <string name="stock_details_vol">Vol</string>
    <string name="stock_details_avg_vol">Avg Vol</string>
    <string name="stock_details_previous_close">Prev Close</string>
    <string name="stock_details_pe">P/E</string>
    <string name="stock_details_eps">EPS</string>
    <string name="stock_details_dividend_by_yield">Div/Yield</string>

    <!-- History Tabs -->
    <string name="tab_1_day">1D</string>
    <string name="tab_1_month">1M</string>
    <string name="tab_3_months">3M</string>
    <string name="tab_6_months">6M</string>
    <string name="tab_1_year">1Y</string>
    <string name="tab_2_years">2Y</string>
    <string name="tab_5_years">5Y</string>
    <string name="tab_max_history">MAX</string>

    <!-- Content Descriptions for History Tabs-->
    <string name="tab_1_day_content_description">1 day stock chart</string>
    <string name="tab_1_month_content_description">1 month stock chart</string>
    <string name="tab_3_months_content_description">3 months stock chart</string>
    <string name="tab_6_months_content_description">6 months stock chart</string>
    <string name="tab_1_year_content_description">1 year stock chart</string>
    <string name="tab_2_years_content_description">2 years stock chart</string>
    <string name="tab_5_years_content_description">5 years stock chart </string>
    <string name="tab_max_history_content_description">MAX history stock chart</string>


    <!-- Chart Content Description -->
    <string name="chart_description">Stock History</string>
    <string name="chart_no_data_text">No Chart Data Available!</string>

    <!-- Chart marker -->
    <string name="format_marker_view"><xliff:g id="formatted_y_val">%1$s</xliff:g> $</string>

    <!-- Navigation  -->
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_messages">Messages</string>
    <string name="nav_drawer_friends">Friend</string>
    <string name="nav_drawer_discussion">Discussion</string>
    <string name="nav_drawer_subItem1">Sub Item 1</string>
    <string name="nav_drawer_subItem2">Sub Item 2</string>
    <string name="nav_header_userName">UserName</string>

    <!--SharePrefs -->
    <string name="pref_quote_status_key" translatable="false">quoteStatus</string>

    <!-- Error states -->
    <string name="empty_quote_list_no_saved_stocks">No Saved Stock Symbols</string>
    <string name="empty_quote_list_server_down">Stock Information NA. Server Down!</string>
    <string name="empty_quote_list_server_error">Check For An Updated Version of StockHawk.</string>


</resources>
