<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/nav_drawer_home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_drawer_messages" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_headset_black_24dp"
            android:title="@string/nav_drawer_friends" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/nav_drawer_discussion" />
    </group>

    <item android:title="Sub items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/nav_drawer_subItem1" />
            <item
                android:icon="@drawable/ic_forum_black_24dp"
                android:title="@string/nav_drawer_subItem2" />
        </menu>
    </item>

</menu>